--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,7 @@ header p {
     flex-direction: column;
     justify-content: space-between;
     min-height: 0;
+    overflow: scroll;
 }
 
 .question-card.fading {
